--- a/src-cordova/package.json
+++ b/src-cordova/package.json
@@ -1,6 +1,6 @@
 {
   "name": "org.cordova.quasar.app",
-  "displayName": "Catalogo",
+  "displayName": "Catalogo de Toyota",
   "version": "1.0.0",
   "description": "A sample Apache Cordova application that responds to the deviceready event.",
   "main": "index.js",
@@ -13,11 +13,15 @@
   "author": "Apache Cordova Team",
   "license": "Apache-2.0",
   "devDependencies": {
-    "cordova-android": "^10.1.2"
+    "cordova-android": "^10.1.2",
+    "cordova-plugin-splashscreen": "^6.0.2"
   },
   "cordova": {
     "platforms": [
       "android"
-    ]
+    ],
+    "plugins": {
+      "cordova-plugin-splashscreen": {}
+    }
   }
 }
